frontend/generated/RecipeLangParser.cpp

// Generated from ../../grammar/RecipeLang.g4 by ANTLR 4.13.2


#include "RecipeLangListener.h"
#include "RecipeLangVisitor.h"

#include "RecipeLangParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct RecipeLangParserStaticData final {
  RecipeLangParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  RecipeLangParserStaticData(const RecipeLangParserStaticData&) = delete;
  RecipeLangParserStaticData(RecipeLangParserStaticData&&) = delete;
  RecipeLangParserStaticData& operator=(const RecipeLangParserStaticData&) = delete;
  RecipeLangParserStaticData& operator=(RecipeLangParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag recipelangParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<RecipeLangParserStaticData> recipelangParserStaticData = nullptr;

void recipelangParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (recipelangParserStaticData != nullptr) {
    return;
  }
#else
  assert(recipelangParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<RecipeLangParserStaticData>(
    std::vector<std::string>{
      "program", "recipeStmt", "rindeDecl", "tiempoPrepDecl", "tiempoCoccDecl", 
      "tagsDecl", "tag", "ingredientesBlock", "ingredientStmt", "pasosBlock", 
      "stepStmt", "nutricionBlock", "totalCostStmt", "totalCaloriesStmt"
    },
    std::vector<std::string>{
      "", "'receta'", "'{'", "'}'", "'rinde'", "'porciones'", "'porcion'", 
      "'tiempo_preparacion'", "'minutos'", "'minuto'", "'tiempo_coccion'", 
      "'tags'", "':'", "'['", "','", "']'", "'ingredientes'", "'ingrediente'", 
      "'cantidad'", "'costo'", "'calorias'", "'pasos'", "'paso'", "'descripcion'", 
      "'usa'", "'depende_de'", "'nutricion'", "'total_costo'", "'total_calorias'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "ID", "FLOAT", "INT", 
      "AMOUNT", "STRING", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  recipelangParserStaticData = std::move(staticData);
}

}

RecipeLangParser::RecipeLangParser(TokenStream *input) : RecipeLangParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

RecipeLangParser::RecipeLangParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  RecipeLangParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *recipelangParserStaticData->atn, recipelangParserStaticData->decisionToDFA, recipelangParserStaticData->sharedContextCache, options);
}

RecipeLangParser::~RecipeLangParser() {
  delete _interpreter;
}

const atn::ATN& RecipeLangParser::getATN() const {
  return *recipelangParserStaticData->atn;
}

std::string RecipeLangParser::getGrammarFileName() const {
  return "RecipeLang.g4";
}

const std::vector<std::string>& RecipeLangParser::getRuleNames() const {
  return recipelangParserStaticData->ruleNames;
}

const dfa::Vocabulary& RecipeLangParser::getVocabulary() const {
  return recipelangParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView RecipeLangParser::getSerializedATN() const {
  return recipelangParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

RecipeLangParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RecipeLangParser::ProgramContext::EOF() {
  return getToken(RecipeLangParser::EOF, 0);
}

std::vector<RecipeLangParser::RecipeStmtContext *> RecipeLangParser::ProgramContext::recipeStmt() {
  return getRuleContexts<RecipeLangParser::RecipeStmtContext>();
}

RecipeLangParser::RecipeStmtContext* RecipeLangParser::ProgramContext::recipeStmt(size_t i) {
  return getRuleContext<RecipeLangParser::RecipeStmtContext>(i);
}


size_t RecipeLangParser::ProgramContext::getRuleIndex() const {
  return RecipeLangParser::RuleProgram;
}

void RecipeLangParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RecipeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void RecipeLangParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RecipeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any RecipeLangParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RecipeLangVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

RecipeLangParser::ProgramContext* RecipeLangParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, RecipeLangParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(29); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(28);
      recipeStmt();
      setState(31); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == RecipeLangParser::T__0);
    setState(33);
    match(RecipeLangParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RecipeStmtContext ------------------------------------------------------------------

RecipeLangParser::RecipeStmtContext::RecipeStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RecipeLangParser::RecipeStmtContext::STRING() {
  return getToken(RecipeLangParser::STRING, 0);
}

RecipeLangParser::RindeDeclContext* RecipeLangParser::RecipeStmtContext::rindeDecl() {
  return getRuleContext<RecipeLangParser::RindeDeclContext>(0);
}

RecipeLangParser::TiempoPrepDeclContext* RecipeLangParser::RecipeStmtContext::tiempoPrepDecl() {
  return getRuleContext<RecipeLangParser::TiempoPrepDeclContext>(0);
}

RecipeLangParser::TiempoCoccDeclContext* RecipeLangParser::RecipeStmtContext::tiempoCoccDecl() {
  return getRuleContext<RecipeLangParser::TiempoCoccDeclContext>(0);
}

RecipeLangParser::TagsDeclContext* RecipeLangParser::RecipeStmtContext::tagsDecl() {
  return getRuleContext<RecipeLangParser::TagsDeclContext>(0);
}

RecipeLangParser::IngredientesBlockContext* RecipeLangParser::RecipeStmtContext::ingredientesBlock() {
  return getRuleContext<RecipeLangParser::IngredientesBlockContext>(0);
}

RecipeLangParser::PasosBlockContext* RecipeLangParser::RecipeStmtContext::pasosBlock() {
  return getRuleContext<RecipeLangParser::PasosBlockContext>(0);
}

RecipeLangParser::NutricionBlockContext* RecipeLangParser::RecipeStmtContext::nutricionBlock() {
  return getRuleContext<RecipeLangParser::NutricionBlockContext>(0);
}


size_t RecipeLangParser::RecipeStmtContext::getRuleIndex() const {
  return RecipeLangParser::RuleRecipeStmt;
}

void RecipeLangParser::RecipeStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RecipeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRecipeStmt(this);
}

void RecipeLangParser::RecipeStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RecipeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRecipeStmt(this);
}


std::any RecipeLangParser::RecipeStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RecipeLangVisitor*>(visitor))
    return parserVisitor->visitRecipeStmt(this);
  else
    return visitor->visitChildren(this);
}

RecipeLangParser::RecipeStmtContext* RecipeLangParser::recipeStmt() {
  RecipeStmtContext *_localctx = _tracker.createInstance<RecipeStmtContext>(_ctx, getState());
  enterRule(_localctx, 2, RecipeLangParser::RuleRecipeStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(35);
    match(RecipeLangParser::T__0);
    setState(36);
    match(RecipeLangParser::STRING);
    setState(37);
    match(RecipeLangParser::T__1);
    setState(38);
    rindeDecl();
    setState(39);
    tiempoPrepDecl();
    setState(40);
    tiempoCoccDecl();
    setState(41);
    tagsDecl();
    setState(42);
    ingredientesBlock();
    setState(43);
    pasosBlock();
    setState(44);
    nutricionBlock();
    setState(45);
    match(RecipeLangParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RindeDeclContext ------------------------------------------------------------------

RecipeLangParser::RindeDeclContext::RindeDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RecipeLangParser::RindeDeclContext::INT() {
  return getToken(RecipeLangParser::INT, 0);
}


size_t RecipeLangParser::RindeDeclContext::getRuleIndex() const {
  return RecipeLangParser::RuleRindeDecl;
}

void RecipeLangParser::RindeDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RecipeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRindeDecl(this);
}

void RecipeLangParser::RindeDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RecipeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRindeDecl(this);
}


std::any RecipeLangParser::RindeDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RecipeLangVisitor*>(visitor))
    return parserVisitor->visitRindeDecl(this);
  else
    return visitor->visitChildren(this);
}

RecipeLangParser::RindeDeclContext* RecipeLangParser::rindeDecl() {
  RindeDeclContext *_localctx = _tracker.createInstance<RindeDeclContext>(_ctx, getState());
  enterRule(_localctx, 4, RecipeLangParser::RuleRindeDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(47);
    match(RecipeLangParser::T__3);
    setState(48);
    match(RecipeLangParser::INT);
    setState(50);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == RecipeLangParser::T__4

    || _la == RecipeLangParser::T__5) {
      setState(49);
      _la = _input->LA(1);
      if (!(_la == RecipeLangParser::T__4

      || _la == RecipeLangParser::T__5)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TiempoPrepDeclContext ------------------------------------------------------------------

RecipeLangParser::TiempoPrepDeclContext::TiempoPrepDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RecipeLangParser::TiempoPrepDeclContext::INT() {
  return getToken(RecipeLangParser::INT, 0);
}


size_t RecipeLangParser::TiempoPrepDeclContext::getRuleIndex() const {
  return RecipeLangParser::RuleTiempoPrepDecl;
}

void RecipeLangParser::TiempoPrepDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RecipeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTiempoPrepDecl(this);
}

void RecipeLangParser::TiempoPrepDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RecipeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTiempoPrepDecl(this);
}


std::any RecipeLangParser::TiempoPrepDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RecipeLangVisitor*>(visitor))
    return parserVisitor->visitTiempoPrepDecl(this);
  else
    return visitor->visitChildren(this);
}

RecipeLangParser::TiempoPrepDeclContext* RecipeLangParser::tiempoPrepDecl() {
  TiempoPrepDeclContext *_localctx = _tracker.createInstance<TiempoPrepDeclContext>(_ctx, getState());
  enterRule(_localctx, 6, RecipeLangParser::RuleTiempoPrepDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    match(RecipeLangParser::T__6);
    setState(53);
    match(RecipeLangParser::INT);
    setState(55);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == RecipeLangParser::T__7

    || _la == RecipeLangParser::T__8) {
      setState(54);
      _la = _input->LA(1);
      if (!(_la == RecipeLangParser::T__7

      || _la == RecipeLangParser::T__8)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TiempoCoccDeclContext ------------------------------------------------------------------

RecipeLangParser::TiempoCoccDeclContext::TiempoCoccDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RecipeLangParser::TiempoCoccDeclContext::INT() {
  return getToken(RecipeLangParser::INT, 0);
}


size_t RecipeLangParser::TiempoCoccDeclContext::getRuleIndex() const {
  return RecipeLangParser::RuleTiempoCoccDecl;
}

void RecipeLangParser::TiempoCoccDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RecipeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTiempoCoccDecl(this);
}

void RecipeLangParser::TiempoCoccDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RecipeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTiempoCoccDecl(this);
}


std::any RecipeLangParser::TiempoCoccDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RecipeLangVisitor*>(visitor))
    return parserVisitor->visitTiempoCoccDecl(this);
  else
    return visitor->visitChildren(this);
}

RecipeLangParser::TiempoCoccDeclContext* RecipeLangParser::tiempoCoccDecl() {
  TiempoCoccDeclContext *_localctx = _tracker.createInstance<TiempoCoccDeclContext>(_ctx, getState());
  enterRule(_localctx, 8, RecipeLangParser::RuleTiempoCoccDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(57);
    match(RecipeLangParser::T__9);
    setState(58);
    match(RecipeLangParser::INT);
    setState(60);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == RecipeLangParser::T__7

    || _la == RecipeLangParser::T__8) {
      setState(59);
      _la = _input->LA(1);
      if (!(_la == RecipeLangParser::T__7

      || _la == RecipeLangParser::T__8)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TagsDeclContext ------------------------------------------------------------------

RecipeLangParser::TagsDeclContext::TagsDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<RecipeLangParser::TagContext *> RecipeLangParser::TagsDeclContext::tag() {
  return getRuleContexts<RecipeLangParser::TagContext>();
}

RecipeLangParser::TagContext* RecipeLangParser::TagsDeclContext::tag(size_t i) {
  return getRuleContext<RecipeLangParser::TagContext>(i);
}


size_t RecipeLangParser::TagsDeclContext::getRuleIndex() const {
  return RecipeLangParser::RuleTagsDecl;
}

void RecipeLangParser::TagsDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RecipeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTagsDecl(this);
}

void RecipeLangParser::TagsDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RecipeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTagsDecl(this);
}


std::any RecipeLangParser::TagsDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RecipeLangVisitor*>(visitor))
    return parserVisitor->visitTagsDecl(this);
  else
    return visitor->visitChildren(this);
}

RecipeLangParser::TagsDeclContext* RecipeLangParser::tagsDecl() {
  TagsDeclContext *_localctx = _tracker.createInstance<TagsDeclContext>(_ctx, getState());
  enterRule(_localctx, 10, RecipeLangParser::RuleTagsDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    match(RecipeLangParser::T__10);
    setState(63);
    match(RecipeLangParser::T__11);
    setState(64);
    match(RecipeLangParser::T__12);
    setState(65);
    tag();
    setState(70);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == RecipeLangParser::T__13) {
      setState(66);
      match(RecipeLangParser::T__13);
      setState(67);
      tag();
      setState(72);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(73);
    match(RecipeLangParser::T__14);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TagContext ------------------------------------------------------------------

RecipeLangParser::TagContext::TagContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RecipeLangParser::TagContext::ID() {
  return getToken(RecipeLangParser::ID, 0);
}

tree::TerminalNode* RecipeLangParser::TagContext::STRING() {
  return getToken(RecipeLangParser::STRING, 0);
}


size_t RecipeLangParser::TagContext::getRuleIndex() const {
  return RecipeLangParser::RuleTag;
}

void RecipeLangParser::TagContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RecipeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTag(this);
}

void RecipeLangParser::TagContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RecipeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTag(this);
}


std::any RecipeLangParser::TagContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RecipeLangVisitor*>(visitor))
    return parserVisitor->visitTag(this);
  else
    return visitor->visitChildren(this);
}

RecipeLangParser::TagContext* RecipeLangParser::tag() {
  TagContext *_localctx = _tracker.createInstance<TagContext>(_ctx, getState());
  enterRule(_localctx, 12, RecipeLangParser::RuleTag);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    _la = _input->LA(1);
    if (!(_la == RecipeLangParser::ID

    || _la == RecipeLangParser::STRING)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IngredientesBlockContext ------------------------------------------------------------------

RecipeLangParser::IngredientesBlockContext::IngredientesBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<RecipeLangParser::IngredientStmtContext *> RecipeLangParser::IngredientesBlockContext::ingredientStmt() {
  return getRuleContexts<RecipeLangParser::IngredientStmtContext>();
}

RecipeLangParser::IngredientStmtContext* RecipeLangParser::IngredientesBlockContext::ingredientStmt(size_t i) {
  return getRuleContext<RecipeLangParser::IngredientStmtContext>(i);
}


size_t RecipeLangParser::IngredientesBlockContext::getRuleIndex() const {
  return RecipeLangParser::RuleIngredientesBlock;
}

void RecipeLangParser::IngredientesBlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RecipeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIngredientesBlock(this);
}

void RecipeLangParser::IngredientesBlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RecipeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIngredientesBlock(this);
}


std::any RecipeLangParser::IngredientesBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RecipeLangVisitor*>(visitor))
    return parserVisitor->visitIngredientesBlock(this);
  else
    return visitor->visitChildren(this);
}

RecipeLangParser::IngredientesBlockContext* RecipeLangParser::ingredientesBlock() {
  IngredientesBlockContext *_localctx = _tracker.createInstance<IngredientesBlockContext>(_ctx, getState());
  enterRule(_localctx, 14, RecipeLangParser::RuleIngredientesBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    match(RecipeLangParser::T__15);
    setState(78);
    match(RecipeLangParser::T__1);
    setState(82);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == RecipeLangParser::T__16) {
      setState(79);
      ingredientStmt();
      setState(84);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(85);
    match(RecipeLangParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IngredientStmtContext ------------------------------------------------------------------

RecipeLangParser::IngredientStmtContext::IngredientStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RecipeLangParser::IngredientStmtContext::ID() {
  return getToken(RecipeLangParser::ID, 0);
}

tree::TerminalNode* RecipeLangParser::IngredientStmtContext::AMOUNT() {
  return getToken(RecipeLangParser::AMOUNT, 0);
}

tree::TerminalNode* RecipeLangParser::IngredientStmtContext::FLOAT() {
  return getToken(RecipeLangParser::FLOAT, 0);
}

tree::TerminalNode* RecipeLangParser::IngredientStmtContext::INT() {
  return getToken(RecipeLangParser::INT, 0);
}


size_t RecipeLangParser::IngredientStmtContext::getRuleIndex() const {
  return RecipeLangParser::RuleIngredientStmt;
}

void RecipeLangParser::IngredientStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RecipeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIngredientStmt(this);
}

void RecipeLangParser::IngredientStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RecipeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIngredientStmt(this);
}


std::any RecipeLangParser::IngredientStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RecipeLangVisitor*>(visitor))
    return parserVisitor->visitIngredientStmt(this);
  else
    return visitor->visitChildren(this);
}

RecipeLangParser::IngredientStmtContext* RecipeLangParser::ingredientStmt() {
  IngredientStmtContext *_localctx = _tracker.createInstance<IngredientStmtContext>(_ctx, getState());
  enterRule(_localctx, 16, RecipeLangParser::RuleIngredientStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    match(RecipeLangParser::T__16);
    setState(88);
    match(RecipeLangParser::ID);
    setState(89);
    match(RecipeLangParser::T__17);
    setState(90);
    match(RecipeLangParser::AMOUNT);
    setState(91);
    match(RecipeLangParser::T__18);
    setState(92);
    match(RecipeLangParser::FLOAT);
    setState(93);
    match(RecipeLangParser::T__19);
    setState(94);
    match(RecipeLangParser::INT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PasosBlockContext ------------------------------------------------------------------

RecipeLangParser::PasosBlockContext::PasosBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<RecipeLangParser::StepStmtContext *> RecipeLangParser::PasosBlockContext::stepStmt() {
  return getRuleContexts<RecipeLangParser::StepStmtContext>();
}

RecipeLangParser::StepStmtContext* RecipeLangParser::PasosBlockContext::stepStmt(size_t i) {
  return getRuleContext<RecipeLangParser::StepStmtContext>(i);
}


size_t RecipeLangParser::PasosBlockContext::getRuleIndex() const {
  return RecipeLangParser::RulePasosBlock;
}

void RecipeLangParser::PasosBlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RecipeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPasosBlock(this);
}

void RecipeLangParser::PasosBlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RecipeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPasosBlock(this);
}


std::any RecipeLangParser::PasosBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RecipeLangVisitor*>(visitor))
    return parserVisitor->visitPasosBlock(this);
  else
    return visitor->visitChildren(this);
}

RecipeLangParser::PasosBlockContext* RecipeLangParser::pasosBlock() {
  PasosBlockContext *_localctx = _tracker.createInstance<PasosBlockContext>(_ctx, getState());
  enterRule(_localctx, 18, RecipeLangParser::RulePasosBlock);
  size_t _la = 0;
